fix firebase deploy command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,10 @@ jobs:
             - ./node_modules
       - run:
           name: Build application for production
-          command: npm run build 
+          command: npm run build
       - run:
           name: Deploy app to Firebase
-          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN  
+          command: firebase deploy --token=$FIREBASE_TOKEN  
 workflows:
   build-and-deploy:
     jobs:
