--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: npm run build
       - run:
           name: Deploy app to Firebase
-          command: firebase deploy --token=$FIREBASE_TOKEN  
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN  
 workflows:
   build-and-deploy:
     jobs:
