deploy only when on prod env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2.1
 jobs:
   build:
+    # parameters:
+    #   name: 
+    #     type: string
+    #     default: 
     working_directory: ~/project
     docker:
       - image: cimg/node:18.0.0
@@ -26,8 +30,13 @@ jobs:
       - run:
           name: Deploy app to Firebase
           command: |
-            ./node_modules/.bin/firebase use default
-            ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
+            if [ $CIRCLE_BRANCH = "main" ]; then \
+              ./node_modules/.bin/firebase use default
+              ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
+            else \
+              return; \
+            fi
+
 workflows:
   build-and-deploy:
     jobs:
