--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
             if [ $CIRCLE_BRANCH = "main" ]; then \
               ./node_modules/.bin/firebase use default
               ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
+            elif [ $CIRCLE_BRANCH = "develop" ]; then \
+              ./node_modules/.bin/firebase use develop
+              ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
             else \
               echo "not deploying on $CIRCLE_BRANCH"; \
             fi
