--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
     "default": "react-app-firebase-6901d",
-    "react-circleci": "react-app-firebase-6901d"
+    "react-circleci": "react-app-firebase-6901d",
+    "develop": "react-app-firebase-develop"
   },
   "targets": {},
   "etags": {}
